# mlops-dvc-cicd

./: README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cicd.yml
config/: params.yaml
src/components/: data_ingestion.py  data_transformation.py  model_training.py
src/utils/: exception_handling.py  logger.py  utilities.py
