[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops-dvc-cicd"
version = "0.1.0"
description = "Testing mlflow along with dvc and github cicd"
authors = [
    {name="Ravi Kumar", email='travikumar3456@gmail.com'}
]
readme = "README.md"
requires-python = ">3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.flit.module]
name = "src"

[tool.ruff]
line-length = 99
src = 'src'
include = ["mlops_dvc_cicd/**/*.py", 'pyproject.toml']

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true